# tiertune

./: .bumpversion.cfg  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci-coding-format.yml  ci-lint.yml
config/aws/: tiertune-aws.yml
config/azure/: tiertune-azure.yml
config/gce/: tiertune-gce-x4-tuned.conf  tiertune-gce.yml
package/: python-tiertune-rpmlintrc  python-tiertune-spec-template  python-tiertune.changes
systemd/: tiertune-aws.service  tiertune-azure.service  tiertune-gce.service
test/data/: tiertune-aws.yml
test/data/tiertune-aws.yml.d/: some.yml
test/unit/: aws_test.py  azure_test.py  codec_test.py  command_test.py  config_test.py  cpupower_test.py  defaults_test.py  gce_test.py  sysctl_test.py  systemd_test.py  tuned_test.py
test/unit/instance_type/: aws_test.py  azure_test.py  base_test.py  gce_test.py  init_test.py
tiertune/: aws.py  azure.py  codec.py  command.py  config.py  cpupower.py  defaults.py  exceptions.py  gce.py  sysctl.py  systemd.py  tuned.py  version.py
tiertune/instance_type/: __init__.py  aws.py  azure.py  base.py  gce.py
tiertune/template/: cpupower.service
