[tool.poetry]
name = "tiertune"
version = "0.0.4"
description = "tiertune - configure instance per type"
license = "GPL-3.0-or-later"
readme = "README.rst"

authors = [
   "Marcus Schäfer <marcus.schaefer@suse.com>",
]
maintainers = [
   "Marcus Schäfer <marcus.schaefer@suse.com>",
]

packages = [
   { include = "tiertune"},
]

include = [
   { path = "config", format = "sdist" },
   { path = "package", format = "sdist" },
   { path = "test", format = "sdist" },
   { path = "systemd", format = "sdist" },
]

classifiers = [
   # classifier: http://pypi.python.org/pypi?%3Aaction=list_classifiers
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Operating System :: POSIX :: Linux",
   "Topic :: System :: Operating System",
]

[tool.poetry.urls]
# "Bug Tracker" = ""

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = ">=5.4.0"
setuptools = ">=50"

[tool.poetry.scripts]
tiertune-aws = "tiertune.aws:main"
tiertune-azure = "tiertune.azure:main"
tiertune-gce = "tiertune.gce:main"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
# python unit testing framework
pytest = ">=6.2.0"
pytest-cov = "*"
pytest-xdist = "*"
pytest-container = "*"
# type checking
mypy = ">=0.971"
types-PyYAML = "*"
types-mock = "*"

[tool.poetry.group.style]
[tool.poetry.group.style.dependencies]
flake8 = ">=4.0.0"

[tool.poetry.group.development]
[tool.poetry.group.development.dependencies]
bumpversion = "*"
black = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1.2.9"]
build-backend = "poetry.core.masonry.api"
